--- a/AutoKeygenAnalyzer/AutoKeygenAnalyzer.vcxproj.filters
+++ b/AutoKeygenAnalyzer/AutoKeygenAnalyzer.vcxproj.filters
@@ -20,10 +20,10 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Instruction.h">
+    <ClInclude Include="Instruction.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CPUState.h">
+    <ClInclude Include="Action.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
