unicorn integration and how we're going to use it

--- a/AutoKeygenAnalyzer/AutoKeygenAnalyzer.vcxproj.filters
+++ b/AutoKeygenAnalyzer/AutoKeygenAnalyzer.vcxproj.filters
@@ -18,12 +18,21 @@
     <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Action.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Register.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Instruction.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Action.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Register.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
