--- a/AutoKeygenAnalyzer/AutoKeygenAnalyzer.vcxproj.filters
+++ b/AutoKeygenAnalyzer/AutoKeygenAnalyzer.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Register.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Instruction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Instruction.hpp">
